--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "sdkVersion": "22.0.0",
-    "name": "Apka z mapami",
+    "name": "Apka z mapką",
     "icon": "./app-icon.png",
     "version": "1.0.0",
     "slug": "apka-z-mapami",
